[package]
name = "proof_eth"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.5.0", features = ["rlp"] }
alloy-rlp = { version = "0.3.3", features = ["derive"] }
alloy-trie = "0.1.0"
ethers = { version = "2.0.11", features = ["rustls"] }
ruint = { version = "1.11.1", features = ["primitive-types"] }
tokio = { version = "1.34.0", features = ["macros", "rt", "rt-multi-thread"] }
